# vn-engine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  conventions.md  vn_engine.cpp  vn_engine.h
local_test/: local_test.cpp
local_test/old/runtime/: runtime_characters.cpp
local_test/runtime/: runtime_chapters.h  runtime_characters.h
src/: vn_engine.cpp  vn_engine.h
src/Core/: bond.cpp  bond.h  chapter.cpp  chapter.h  character.cpp  character.h  graph.cpp  graph.h  node.cpp  node.h  node_children.cpp  node_children.h  relation.cpp  relation.h  relation_types.cpp  relation_types.h
src/Data_Structures/: node.h
src/Engine/: camera.cpp  camera.h  frame.cpp  frame.h  scene_vertex_shader.glsl  shader.cpp  shader.h  texture.cpp  texture.h
src/Glsl/: backgroundFragment.glsl  backgroundVertex.glsl  characterVertex.glsl
src/Json/: json_error.cpp  json_lexer.cpp  json_lexer.h  json_token.cpp  json_token.h
src/JsonParser/: json_lexer.cpp  json_lexer.h
src/JsonParser/JsonTests/: characters.json  characters.yaml
src/Runtime/: runtime_chapters.cpp  runtime_chapters.h  runtime_characters.cpp  runtime_characters.h  runtime_relations.cpp  runtime_relations.h
src/Util/: id.h  timer.h
src/common/: id.cpp  id.h  index.h  log.h  logging.h
src/common/exceptions/: exceptions.h
src/common/logs/: debug_log.h
src/common/observe/: observer.h
src/common/structs/: action_type_mappers.cpp  action_type_mappers.h  action_type_mappers_helpers.h  engine_drag_drop_payload.h
src/common/types/: id.cpp  id.h
src/core/: character.cpp  graph.cpp  id.h
src/core_/: chapter.h  character.cpp  relation.cpp  relation.h  relation_types.cpp
src/engine/: engine.cpp  engine.h  engine_helpers.cpp  engine_helpers.h  frame.cpp  frame.h  frame_composer.h  texture.cpp  texture.h
src/engine/node_editors/: graph_editors_common.cpp
src/engine/sidebar/: engine_action_type_list.h  engine_chapter_editor.cpp  engine_chapter_editor.h  engine_character_editor.cpp  engine_character_editor.h  engine_characters_config.h  engine_node_action_fields.cpp  engine_node_editor_sidebar.cpp  engine_node_editor_sidebar.h  engine_relation_editor.cpp  engine_relation_editor.h  engine_relation_types.h  engine_relations_config.h  engine_relations_editor.h  engine_scene_action_editor.cpp  engine_scene_action_editor.h  engine_scene_action_type_list.h  engine_scene_editor.cpp  engine_scene_editor.h  engine_texture_editor.cpp  engine_texture_editor.h
src/engine_/: frame.cpp  frame.h  shader.h
src/game/: context.cpp  context.h  controller.h  controller_helpers.h  game_loop.h  game_observer.h
src/game/internals/: shader.cpp  shader.h  texture.h  window.h
src/game/layers/: layer_background.cpp  layer_background.h  layer_choice.h  layer_main_menu.cpp  layer_main_menu.h  layer_options.h  layer_saves.cpp  layer_saves.h  layer_sidebar.h  layer_sprite.cpp  layer_sprite.h  layer_text.h  layer_transition.h
src/game/resource_managers/: texture_manager.h
src/game_internals/: text.cpp  window.h
src/game_internals/glsl/: fragment_text.glsl
src/game_internals/resource_managers/: texture_manager.h
src/model/: model_common.h  model_subject.h  state_subject.h  state_types.h  subject.h  subjects_orchestrator.h
src/model/base/: chapter.cpp  chapter.h  graph.h  linkable.cpp  linkable.h  node.cpp  node.h  node_children.cpp  node_children.h  node_parents.cpp  node_parents.h  node_stray.cpp  node_stray.h
src/model/builders/: chapter_builder.h  chapter_node_builder.h  character_builder.h  linkable_builder.h  node_builder.h  texture_store_builder.h
src/model/chapter/: chapter.cpp  chapter.h  chapter_iterator.h
src/model/chapter_node/: action_type_mappers.cpp  action_type_mappers.h  chapter_node.cpp  chapter_node.h  chapter_node_types.h
src/model/character/: character.cpp  character.h  relation.cpp  relation.h  relation_types.cpp  relation_types.h  relations.h
src/model/components/: model_chapters.h  model_characters.h  model_relation_types.h  model_relations.h  model_textures.h
src/model/graph/: graph.cpp  graph.h  graph_iterator.cpp  graph_iterator.h  graph_traverser.cpp  graph_traverser.h
src/model/interface/: model_common_interface.h  model_engine_interface.h  model_runtime_interface.h  model_subject.h
src/model/iterators/: chapter_iterator.cpp  chapter_iterator.h  graph_traverser.cpp  graph_traverser.h  node_runner.h
src/model/linkable/: chapter.h  linkable.cpp  linkable.h  node.h
src/model/model/: model_subject.cpp  model_subject.h
src/model/model_subject/: model_chapters.h  model_characters.h  model_relations.h  model_subject.cpp  model_subject.h  model_textures.h
src/model/node/: chapter_node.cpp  chapter_node.h  chapter_node_types.h  node.cpp  node.h  node_iterator.h  node_runner.h  node_substep_runner.cpp  node_substep_runner.h
src/model/resource_managers/: engine_chapter_manager.h  runtime_chapter_manager.h
src/model/state/: state_background.h  state_choices.cpp  state_choices.h  state_delta.h  state_dialogue.h  state_relations.cpp  state_relations.h  state_sprites.cpp  state_sprites.h  state_subject.cpp  state_subject.h  (+1 more)
src/runtime/: runtime_chapters.cpp  runtime_relations.cpp  runtime_relations.h
src/runtime_/: runtime_chapters.cpp  runtime_chapters.h
src/savefile/: json_token.cpp  json_token.h
src/serialize/: save_model.h  save_state.h
src/state/: state_FSA.h  subject.h
src/view/: engine_observer.h  game_observer.h  gameloop.h  observer.h
test/assets/: readme.md
test/cpp_tests/: boolBinOr.cpp  classSpecialization.cpp  constructorTemplate.cpp  data_struct_size.cpp  destructor.cpp  foreach.cpp  inherit_test.cpp  list_remove.cpp  vectorRefReturn.cpp
test/json/: test1.json
test/old_files/: backups.cpp  engine_node_store.h  engine_properties.h  graph.h  graph_traverser.cpp  graph_traverser.h  node_children.cpp  node_children.h  node_parents.cpp  node_substep_runner.cpp  subjects_orchestrator.h  temp.cpp  types.h
test_assets/: readme.md
tests/Json/: test1.json
use_cases/: core.md
visual novel engine/: CMakeLists.txt  vn_engine.cpp  vn_engine.h
(+172 files in other folders)
